# hsvmoment

./: CITATION.cff  LICENSE  README.md  pyproject.toml
docs/source/: blocks.rst  conf.py  installation.rst  quickstart.rst
src/hsvmoment/: __init__.py  cpp_mmnt.py  ito_mmnt.py  itos_mmnt.py  poly.py
src/hsvmoment/archive/: cpp_moments.py  ito_moments.py  mdl_1FSVJ.py  mdl_2FSV.py  mdl_2FSVJ.py  mdl_cmoments.py  mdl_moments.py  simplify_terms.py
src/hsvmoment/mdl_1fsv/: __init__.py  cmoment.py  cov.py  moment.py
src/hsvmoment/mdl_1fsvj/: __init__.py  cmoment.py  cov.py  moment.py
src/hsvmoment/mdl_2fsv/: __init__.py  cmoment.py  cov.py  moment.py
src/hsvmoment/mdl_2fsvj/: __init__.py  cmoment.py  cov.py  moment.py
